--- a/css/mousa1.css
+++ b/css/mousa1.css
@@ -31,12 +31,12 @@
 #aud{
     background-color: #212529 !important;
     width: 250px;
-    border: 0.5px solid #212529;
-    margin-top: 5px;
+    border: 0.5px solid #212529 !important;
+    margin-top: 5px !important;
 }
 
 #divId{
-    text-align: center;
+    text-align: center !important;
     
 }
 
