--- a/css/mousa2.css
+++ b/css/mousa2.css
@@ -28,6 +28,18 @@
 }
 
 
+#aud{
+    background-color: #212529 !important;
+    width: 250px;
+    border: 0.5px solid #212529 !important;
+    margin-top: 5px !important;
+}
+
+#divId{
+    text-align: center !important;
+    
+}
+
 
 
 .card-deck{
